include $(top_srcdir)/common/python.mk
include $(top_srcdir)/common/locale.mk

flumotiondir = $(libdir)/flumotion/python/flumotion/project

flumotion_PYTHON = windowsmedia.py

clean-local:
	rm -f *.pyc *.pyo

PROJECT = windowsmedia

BUILT_SOURCES = windowsmedia.py
CLEANFILES = $(BUILT_SOURCES)

EXTRA_DIST = windowsmedia.py.in
